# discrete-exterior-calculus

./: CMakeLists.txt  README.md
data/: Alex1042_rgb.uv.m  Alex_rgb.uv.m
demo_project/: CMakeLists.txt
demo_project/include/: DEC.h  MyMesh.h  arrowPoint.h  colormap.h  geometry.h
demo_project/src/: Viewer.cpp
